--- a/.nais/dev/nada-backend/nada-backend-config.yaml
+++ b/.nais/dev/nada-backend/nada-backend-config.yaml
@@ -130,6 +130,7 @@ data:
       client_secret: "not_valid"
     email_suffix: '@nav.no'
     keywords_admin_group: nada@nav.no
+    all_users_email: all-users@nav.no
     all_users_group: group:all-users@nav.no
     login_page: https://data.ansatt.dev.nav.no/
     amplitude_api_key: # Loaded from env var NADA_AMPLITUDE_API_KEY
