--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -134,6 +134,7 @@ pubsub:
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
 keywords_admin_group: nada@nav.no
+all_users_email: all-users@nav.no
 all_users_group: group:all-users@nav.no
 login_page: http://localhost:3000/
 cache_duration_seconds: 7200
