bug(gha): try something else

--- a/.github/workflows/build-and-deploy-backend.yml
+++ b/.github/workflows/build-and-deploy-backend.yml
@@ -134,12 +134,11 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-      - id: store-metabase-test-credentials
-        if: ${{ inputs.notest != 'true' }}
+      - name: Set up credentials
         run: |
-          echo "${{ secrets.METABASE_ALL_USERS_SA_CREDS_JSON }}" | base64 -d > tests-metabase-all-users-sa-creds.json && \
-          if [ ! -s tests-metabase-all-users-sa-creds.json ]; then echo "Error: Credentials file is empty" && exit 1; fi && \
-          if ! jq . tests-metabase-all-users-sa-creds.json >/dev/null 2>&1; then echo "Error: Invalid JSON format in credentials file" && exit 1; fi
+          cat << 'EOF' > tests-metabase-all-users-sa-creds.json
+          ${{ secrets.METABASE_ALL_USERS_SA_CREDS_JSON }}
+          EOF
       - id: run-tests
         if: ${{ inputs.notest != 'true' }}
         run: make test
